fix: login on mobile

--- a/src/views/Login/index.scss
+++ b/src/views/Login/index.scss
@@ -46,7 +46,6 @@ body {
     margin-top: 100px;
     box-shadow: 0 0 10px #000;
     min-width: 20vw;
-    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
